<resources>
    <string name="app_name">crit.rs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_onboarding" />
    <string name="action_next">Next</string>

    <string name="onboarding_welcome_title">Welcome, human.</string>
    <string name="onboarding_welcome_detail">Our world is huge with lots of wildlife to discover.</string>
    <string name="onboarding_maps_title">Map based gameplay.</string>
    <string name="onboarding_maps_detail">Take photos of all animals that appear in your area.</string>
    <string name="onboarding_photo_title">Capture as you go.</string>
    <string name="onboarding_photo_detail">Add ALL animals to your encyclopedia to be the ultimate human!</string>

    <string name="title_map">Map</string>
    <string name="title_encyclopedia">Encyclopedia</string>
    <string name="title_store">Store</string>
    <string name="title_entry">Admiral Peacock</string>
    <string name="user_name">Sarah Bridges</string>
    <string name="logout">Logout</string>

    <string name="encounter_message">Suddenly, a wild %1$s appeared</string>
    <string name="encounter_confirm">Capture it!</string>
    <string name="encounter_cancel">Run</string>
    <string name="action_berry">Use Berry</string>
    <string name="berry">Berry thrown!</string>
    <string name="placeholder_locationname">Melbourne, CBD</string>
    <string name="lbl_animals">Animals</string>
    <string name="lbl_landmarks">Landmarks</string>
    <string name="lbl_parks">Parks</string>
    <string name="share">Share</string>
    <string name="share_title">Caught %1$s</string>
</resources>
