<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DefaultMargin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/padding_default">

<RelativeLayout
    style="@style/DefaultPadding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:background="@drawable/bg_location"
        android:paddingStart="24dp"
        android:drawableStart="@drawable/ic_place"
        android:paddingEnd="48dp"
        android:text="@string/placeholder_locationname"
        android:gravity="center"
        android:layout_margin="@dimen/padding_default"/>

    <TextView
        android:id="@+id/animals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1 of 22"
        android:textColor="@color/blue"
        android:layout_below="@+id/location"
        android:layout_toStartOf="@+id/parks"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/padding_default"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/animals"
        android:layout_alignStart="@+id/animals"
        android:layout_alignEnd="@+id/animals"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/lbl_animals"/>

    <TextView
        android:id="@+id/parks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:text="3 of 13"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:layout_below="@+id/location"
        android:layout_marginTop="@dimen/padding_default"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/lbl_parks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parks"
        android:layout_alignStart="@+id/parks"
        android:layout_alignEnd="@+id/parks"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/lbl_parks"/>

    <TextView
        android:id="@+id/landmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 of 120"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/parks"
        android:gravity="center"
        android:layout_marginTop="@dimen/padding_default"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/landmarks"
        android:layout_alignStart="@+id/landmarks"
        android:layout_alignEnd="@+id/landmarks"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/lbl_landmarks"/>


    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/parks"
        android:layout_alignBottom="@+id/lbl_parks"
        android:layout_toEndOf="@+id/parks"
        android:background="@color/divider" />

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/parks"
        android:layout_alignBottom="@+id/lbl_parks"
        android:layout_toStartOf="@+id/parks"
        android:background="@color/divider"/>
</RelativeLayout>
</android.support.v7.widget.CardView>